challenges api done (performed some checks with postman)
